force-app/main/default/objects/Lease__c/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <label>Rent</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>