force-app/main/default/objects/Lease__c/fields/ResidentName__c.field-meta.xml
<CustomField>
    <fullName>ResidentName__c</fullName>
    <formula>Resident__r.First_Name__c  +  Resident__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResidentName</label>
    <type>Text</type>
</CustomField>