force-app/main/default/objects/Lease__c/validationRules/Deposit_amount_at_least_months_rent.validationRule-meta.xml
<ValidationRule>
    <fullName>Deposit_amount_at_least_months_rent</fullName>
    <active>true</active>
    <errorConditionFormula>Deposit__c &lt;  Rent__c</errorConditionFormula>
    <errorMessage>Security Deposit must be at least one month&apos;s rent</errorMessage>
</ValidationRule>