force-app/main/default/objects/Lease__c/validationRules/End_Date_after_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_after_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>(YEAR(End_Date__c) &lt; YEAR( Start_Date__c))  || ((YEAR(End_Date__c) = YEAR( Start_Date__c))  &amp;&amp; (MONTH(End_Date__c) &lt;= MONTH( Start_Date__c)))</errorConditionFormula>
    <errorMessage>End date month must be after start date month</errorMessage>
</ValidationRule>